# CubeSandbox

./: Makefile  README.md  README_zh.md  openapi.yml
.github/workflows/: build-pvm-guest-vmlinux.yml  release-docker-images.yml  release-one-click.yml
CubeAPI/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
CubeAPI/src/: crypto.rs  db.rs  main.rs  openapi.rs  routes.rs
CubeAPI/src/config/: mod.rs
CubeAPI/src/cubemaster/: mod.rs
CubeAPI/src/handlers/: agenthub.rs  auth.rs  mod.rs  sandboxes.rs  templates.rs
CubeAPI/src/logging/: http.rs  mod.rs
CubeAPI/src/middleware/: auth.rs
CubeAPI/src/models/: mod.rs
CubeAPI/src/services/: sandboxes.rs  templates.rs
CubeDB/migrate/: migrate.go
CubeEgress/: Makefile
CubeMaster/: Dockerfile  Dockerfile.dockerignore  Makefile
CubeMaster/api/types/v1/: images.pb.go
CubeMaster/cmd/cubemaster/: main.go
CubeMaster/cmd/cubemaster/app/: main.go
CubeMaster/cmd/cubemastercli/app/: main.go
CubeMaster/pkg/base/config/: config.go
CubeMaster/pkg/base/db/: db.go  db_test.go  postgres_testutil_test.go
CubeMaster/pkg/localcache/: export.go
CubeMaster/pkg/nodemeta/: service.go
CubeMaster/pkg/server/: server.go
CubeMaster/pkg/templatecenter/: artifact_gc.go  artifact_gc_test.go  cache.go  compat.go  compat_test.go  fingerprint.go  postgres_testutil_test.go  request_validation.go  snapshot_ops.go  snapshot_view.go  store.go  store_postgres_test.go  template_commit.go  template_image_test.go
CubeMaster/pkg/templatecenter/image/: command.go  disk.go  export.go  image_test.go  native.go  ref.go  source.go
CubeNet/src/: mvmtap.bpf.c  tcp.h
CubeOps/: Dockerfile  Dockerfile.dockerignore  README.md  config.example.yaml  go.mod
CubeOps/cmd/cubeops/: main.go
CubeOps/internal/config/: config.go
CubeOps/internal/logging/: logging.go
CubeOps/internal/store/: db.go
CubeProxy/: Dockerfile  Makefile
CubeShim/cube-runtime/: Cargo.toml  build.rs
CubeShim/cube-runtime/src/: parser.rs
CubeShim/shim/: build.rs
CubeShim/shim/src/: main.rs
CubeShim/shim/src/common/: mod.rs
CubeShim/shim/src/hypervisor/: config.rs  (+1 more)
Cubelet/: Makefile  go.mod  go.sum
Cubelet/cmd/cubelet/: main.go
Cubelet/config/: config.toml  plugin.conf
Cubelet/doc/: cubelet-api.md
Cubelet/dynamicconf/: conf.yaml  resource.conf
Cubelet/integration/: nested_hostdir_restore_test.go
Cubelet/pkg/version/: version.go
Cubelet/services/cubebox/: appsnapshot.go  template_ops.go  version_binding.go
agent/: Makefile
agent/src/: main.rs  version.rs.in
cube-lifecycle-manager/: Makefile  README.md
deploy/kubernetes/chart/: README.md  runtime-values.example.yaml  values.yaml
deploy/one-click/: README.md  README_zh.md  build-release-bundle-builder.sh  build-release-bundle.sh  build-vm-assets.sh  env.example  install.sh  online-install.sh
deploy/one-click/CubeAPI/: webhooks.example.toml
deploy/one-click/cubeproxy/: docker-compose.yaml.template
deploy/one-click/lib/: common.sh
deploy/one-click/tests/: test_bump_image.sh  test_env_merge.sh  test_install_mode.sh  test_package_layout.sh  test_release_manifest_contract.sh  test_runtime_file_safety.sh
deploy/one-click/webui/: Dockerfile  nginx.conf
deploy/pvm/: build-pvm-guest-vmlinux.sh  build-pvm-host-kernel-pkg.sh
deploy/pvm/configs/: README.md
docs/architecture/: network.md
docs/blog/posts/: 2026-05-15-welcome.md  2026-05-19-cubesandbox-v0.2.2-release.md  2026-06-01-cubesandbox-perf-benchmark.md  2026-06-03-cubesandbox-perf-benchmark-pvm.md  2026-06-03-cubesandbox-v0.3.0-snapshot.md  2026-06-17-cubesandbox-v0.4.0-release.md  2026-06-23-cubesandbox-network-deep-dive.md  2026-06-25-cubesandbox-snapshot-clone-rollback-deep-dive.md  2026-07-03-cubesandbox-v0.5.0-release.md
docs/guide/: digital-assistant.md  persistent-storage.md  quickstart.md  service-management.md  tencentcloud-terraform-deploy.md
docs/guide/integrations/: index.md  webhooks.md
docs/guide/troubleshooting/: component-log-locations.md  deployment.md  index.md  local-network-cidr-conflict.md  templates.md
docs/zh/architecture/: network.md
docs/zh/guide/: digital-assistant.md  persistent-storage.md  quickstart.md  service-management.md  tencentcloud-terraform-deploy.md
examples/host-mount/: README.md  create_with_mount.py
examples/volume/cos/: README.md  README.zh.md  install-deps.sh
examples/webhook-receiver/: README.md  README_zh.md  receiver.py
hypervisor/: build.rs
network-agent/: Makefile
network-agent/cmd/network-agent/: main.go
network-agent/pkg/version/: version.go
scripts/: bump-image.sh
sdk/: files-api-streaming.md
sdk/go/: README.md  aligned_test.go  client.go  envd.go  policy.go  pty.go  pty_test.go  sandbox.go  sdk_test.go
sdk/python/: README.md  pyproject.toml
sdk/python/cubesandbox/: __init__.py  _policy.py  sandbox.py
sdk/python/tests/: test_sandbox.py
web/: tsconfig.tsbuildinfo
web/src/: main.tsx
web/src/api/: client.ts
web/src/components/: AuthGuard.tsx
web/src/data/: agents.ts  templateStore.ts
web/src/i18n/: index.ts  resources.ts
web/src/lib/: api.ts  session.ts
web/src/pages/: AgentHub.tsx  Login.tsx  SandboxNew.tsx  Settings.tsx  TemplateDetail.tsx  TemplateStore.tsx  Templates.tsx
web/src/state/: agentStore.ts
(+80 files in other folders)
