[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cubesandbox"
version = "0.5.0"
description = "Python SDK for CubeSandbox"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "requests>=2",
]

[project.urls]
Homepage = "https://github.com/TencentCloud/CubeSandbox"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cubesandbox*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: tests that hit a live CubeAPI instance",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true